--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.7",
+    "@react-oauth/google": "^0.13.4",
     "axios": "^1.13.4",
     "date-fns": "^2.29.1",
     "react": "^18.2.0",
