--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 VITE_GOOGLE_CLIENT_ID=465327573874-0nadr0nbd0oopvv3lbii23lc6pnn2b41.apps.googleusercontent.com
+VITE_SUPABASE_URL=https://SEU-PROJETO.supabase.co
+VITE_SUPABASE_ANON_KEY=sbp_2a1c5ee80891416e86f32e552a8d484991a02ba2
